--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ruder-vida-be-server",
   "version": "1.0.0",
   "description": "server for ruder vida",
+  "proxy": "http://localhost:4000",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
